--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -253,7 +253,7 @@ body {
   position: fixed;
   top: 30px;
   left: 30px;
-  z-index: 1000;
+  z-index: 1100;
 }
 
 /* line 120, ../sass/_navigation.scss */
@@ -283,6 +283,7 @@ body {
   line-height: 2rem;
   color: #fff;
   padding-top: 20vh;
+  z-index: 1000;
 }
 /* line 148, ../sass/_navigation.scss */
 .main-small-navigation .menu-primary-menu-container .menu li,
